# epaper-dashboard

./: .gitignore  app.py  package-lock.json  package.json  pyproject.toml
python/: image.py  pommes.py
static/src/: app.js  input.css
templates/: index.html
